Fix Scrollbar

--- a/src/_app.scss
+++ b/src/_app.scss
@@ -2,3 +2,11 @@
     display: flex;
     // height: 100vh;
 }
+::-webkit-scrollbar{
+    width: .4rem;
+}
+
+::-webkit-scrollbar-thumb{
+    background-color: rgba($color: #F9CC3B, $alpha: .8);
+    border-radius: 6px;
+}
